fixed contrasting issue

--- a/dawgpool/src/index.css
+++ b/dawgpool/src/index.css
@@ -79,10 +79,14 @@ body {
     text-align: center;
     vertical-align: middle;
     line-height: 180px;
-    color: white;
-    font-size: 4rem; 
+    font-size: 4rem;
     font-weight: bold;
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    color: white;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 1); 
+    background-color: rgba(0, 0, 0, 0.01); 
+    padding: 20px; 
+    border-radius: 8px; 
+    display: inline-block; 
 }
 
 /* Navbar */
